# Livraria/DIST/swagger.json
@@ -1117,6 +1117,111 @@
 					}
 				}
 			}
+		},
+		"/Catalogo/CategoriaUsuario": {
+			"get": {
+				"operationId": "ConsultarCategoriaUsuario",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Catálogo"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/Catalogo/CategoriaLivro": {
+			"get": {
+				"operationId": "ConsultarCategoriaLivro",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Catálogo"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/Catalogo/Curso": {
+			"get": {
+				"operationId": "ConsultarCurso",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Catálogo"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
